--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -19,3 +19,10 @@ body {
   padding: 6px 12px;
   text-decoration: none;
 }
+
+.scene-container {
+  background-color: goldenrod;
+  height: 900;
+  position: "relative",;
+  width: 900;
+}
