--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -5,6 +5,7 @@ body {
 }
 
 body {
+  background-color: darkslategrey;
   font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -20,9 +21,15 @@ body {
   text-decoration: none;
 }
 
+.pottery-screen {
+  background-color: pink;
+  height: 720px;
+  width: 100%;
+}
+
 .scene-container {
   background-color: goldenrod;
-  height: 600px;
-  position: "relative",;
-  width: 900px;
+  height: 100%;
+  position: "relative";
+  width: 100%;
 }
