--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6,6 +6,7 @@ body {
 
 body {
   background-color: darkslategrey;
+  color: greenyellow;
   font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -44,4 +45,9 @@ body {
   position: absolute;
   right: 0;
   top: 0;
+}
+
+.drawable-canvas {
+  background-color: #f5f5f5;
+  border: #ccc 1px solid;
 }
