--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6,7 +6,6 @@ body {
 
 body {
   background-color: darkslategrey;
-  color: greenyellow;
   font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -22,14 +21,21 @@ body {
   text-decoration: none;
 }
 
+.swatch-button {
+  border-radius: 5px;
+  height: 90px;
+  margin: 4px;
+  padding: 0;
+  width: 90px;
+}
+
 .pottery-screen {
-  background-color: pink;
-  height: 720px;
+  height: 960px;
   width: 100%;
 }
 
 .scene-container {
-  background-color: goldenrod;
+  background-color: whitesmoke;
   height: 100%;
   position: "relative";
   width: 100%;
@@ -50,4 +56,56 @@ body {
 .drawable-canvas {
   background-color: #f5f5f5;
   border: #ccc 1px solid;
+}
+
+.btn.home {
+  left: 2%;
+  position: fixed;
+  top: 5%;
+}
+
+.btn.fire {
+  border: 1px solid orangered;
+  border-radius: 50%;
+  bottom: 5%;
+  color: orangered;
+  display: block;
+  height: 100px;
+  position: fixed;
+  right: 5%;
+  width: 100px;
+}
+
+.kiln-sequence {
+  left: 0;
+  position: absolute;
+  top: 0;
+}
+
+.menu-hud {
+  height: 100%;
+  pointer-events: none;
+  position: fixed;
+  width: 100%;
+  z-index: 99;
+}
+
+.menu-hud .target-mesh-swatches {
+  position: absolute;
+  right: 0%;
+  top: 10%;
+  width: 10%;
+}
+
+.menu-hud .color-swatches {
+  bottom: 5%;
+  height: 15%;
+  position: absolute;
+  text-align: center;
+  width: 100%;
+}
+
+.menu-hud .swatch-button {
+  box-shadow: 0 1px 6px 2px rgb(15 12 74 / 15%);
+  pointer-events: all;
 }
