--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -7,6 +7,8 @@ body {
 body {
   background-color: darkslategrey;
   font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 .selection-button {
@@ -37,7 +39,9 @@ body {
 .scene-container {
   background-color: whitesmoke;
   height: 100%;
-  position: "relative";
+  left: 0;
+  position: absolute;
+  top: 0;
   width: 100%;
 }
 
@@ -58,6 +62,28 @@ body {
   border: #ccc 1px solid;
 }
 
+.selections-container {
+  left: 33%;
+  position: absolute;
+}
+
+.side-panel {
+  background-color: rgb(255 233 243 / 80%);
+  height: 100%;
+  position: absolute;
+  top: 0;
+  width: 29%;
+  z-index: 5;
+}
+
+.side-panel.left {
+  left: 0;
+}
+
+.side-panel.right {
+  right: 0;
+}
+
 .btn.home {
   left: 2%;
   position: fixed;
@@ -67,19 +93,30 @@ body {
 .btn.fire {
   border: 1px solid orangered;
   border-radius: 50%;
-  bottom: 5%;
   color: orangered;
   display: block;
   height: 100px;
   position: fixed;
-  right: 5%;
+  right: 10%;
+  top: 80%;
   width: 100px;
+  z-index: 99;
 }
 
 .kiln-sequence {
   left: 0;
+  pointer-events: none;
   position: absolute;
   top: 0;
+  z-index: 1;
+}
+
+.firing-screen img {
+  pointer-events: none;
+}
+
+.firing-screen button {
+  z-index: 99;
 }
 
 .menu-hud {
@@ -100,7 +137,6 @@ body {
 .menu-hud .color-swatches {
   bottom: 5%;
   height: 15%;
-  position: absolute;
   text-align: center;
   width: 100%;
 }
