--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -33,6 +33,7 @@ body {
 
 .pottery-screen {
   height: 960px;
+  position: absolute;
   width: 100%;
 }
 
@@ -111,12 +112,52 @@ body {
   z-index: 1;
 }
 
+.firing-screen {
+  height: 100%;
+  position: absolute;
+  width: 100%;
+  z-index: 1;
+}
+
 .firing-screen img {
   pointer-events: none;
 }
 
 .firing-screen button {
   z-index: 99;
+}
+
+.firing-screen .factoids-bar {
+  background-color: rgb(93 129 99);
+  bottom: 0%;
+  height: 15%;
+  position: absolute;
+  width: 100%;
+  z-index: 2;
+}
+
+.firing-screen .factoids-bar h2 {
+  background-color: white;
+  left: 5%;
+  position: absolute;
+  top: 35%;
+}
+
+.factoids-bar .fade-show-element {
+  color: white;
+  height: 20%;
+  opacity: 0;
+  position: absolute;
+  right: 33%;
+  top: 35%;
+  transition: opacity 0.5s ease-out;
+  transition-delay: 0s;
+  width: 25%;
+}
+
+.factoids-bar .fade-show-element.show {
+  opacity: 1;
+  transition-delay: 0.5s;
 }
 
 .menu-hud {
@@ -144,4 +185,11 @@ body {
 .menu-hud .swatch-button {
   box-shadow: 0 1px 6px 2px rgb(15 12 74 / 15%);
   pointer-events: all;
+}
+
+/* Modals */
+
+/* blurred background modal for bootstrap v4 */
+body.modal-open > :not(.modal) {
+  filter: blur(5px);
 }
