--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,28 @@
+@font-face {
+  font-family: Nord;
+  src: url("../styles/fonts/Nord/Nord-Regular.ttf");
+}
+
+@font-face {
+  font-family: Nord-light;
+  src: url("../styles/fonts/Nord/Nord-Light.ttf");
+}
+
+@font-face {
+  font-family: Merriweather-bold;
+  src: url("../styles/fonts/Merriweather/merriweather-all-900-normal.woff");
+}
+
+@font-face {
+  font-family: Merriweather;
+  src: url("../styles/fonts/Merriweather/merriweather-all-400-normal.woff");
+}
+
+@font-face {
+  font-family: Roboto;
+  src: url("../styles/fonts/Roboto-Light.ttf");
+}
+
 html,
 body {
   height: 100%;
@@ -6,9 +31,17 @@ body {
 
 body {
   background-color: darkslategrey;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Merriweather, serif;
   margin: 0;
   padding: 0;
+}
+
+h1 {
+  font-family: Nord, sans-serif;
+}
+
+span {
+  font-family: Roboto, sans-serif;
 }
 
 .selection-button {
@@ -83,6 +116,13 @@ body {
 
 .side-panel.right {
   right: 0;
+}
+
+.btn {
+  background-color: antiquewhite;
+  border: solid 1px #ccc;
+  border-radius: 0%;
+  padding: 15px;
 }
 
 .btn.home {
