--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -197,18 +197,18 @@ button,
 }
 
 .atomizer-reticle {
-  background-color: red;
   background-image: url(./icons/flame.svg);
   background-position: center;
   background-repeat: no-repeat;
   height: 200px;
   margin: 0 auto;
+  pointer-events: none;
   position: absolute;
   text-align: center;
-  transform: translateX(-50%);
+  transform: translateX(-50%) translateY(-50%);
+  visibility: hidden;
   width: 200px;
-  z-index: 3;
-  pointer-events: none;
+  z-index: 5;
 }
 
 .pottery-screen {
@@ -287,7 +287,8 @@ button,
 
 .selection-button {
   background: #fff;
-  box-shadow: 0 4px 13px 1px rgb(54 64 21 / 22%);
+  border: none;
+  box-shadow: 0 4px 13px 1px rgb(54 64 21 / 26%);
   height: 460px;
   position: absolute;
   text-decoration: none;
@@ -392,6 +393,7 @@ button,
 }
 
 .selection-screen .gatsby-image-wrapper {
+  box-shadow: 0 4px 13px 1px rgb(54 64 21 / 26%);
   height: 807px;
   left: 335px;
   position: absolute;
@@ -439,7 +441,7 @@ button,
 }
 
 .btn.home {
-  border: 4px solid #364015;
+  border: 1px solid #364015;
   height: 45px;
   left: 2%;
   position: fixed;
