--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -33,6 +33,14 @@ html {
   background-color: black;
 }
 
+input,
+textarea,
+button,
+select,
+a {
+  -webkit-tap-highlight-color: rgba(0,0,0,0) !important;
+}
+
 body {
   background-color: black;
   font-family: Merriweather, serif;
@@ -497,7 +505,25 @@ span.icon-home {
   top: 997px;
   width: 250px;
   z-index: 99;
+  border: none !important;
+  outline: none !important;
+  -webkit-tap-highlight-color: transparent !important;
+  cursor: default;
 }
+
+button.fire:active,
+button.fire:focus,
+button.fire:focus:active {
+  background-image: none;
+  outline: 0;
+  box-shadow: none;
+}
+
+button.fire div {
+  outline: none !important;
+}
+
+.btn.fire:focus {outline:0;}
 
 .btn.fire .outer {
   background: #ff2626;
@@ -510,6 +536,10 @@ span.icon-home {
   left: calc(50% - 250px / 2);
   position: absolute;
   width: 250px;
+  -webkit-tap-highlight-color: transparent !important;
+  /* border: none !important; */
+  outline: none !important;
+  cursor: default;
 }
 
 .btn.fire .inner {
